[package]
name = "rp2040_pwm_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
fugit = "0.3.9"
# rp2040-hal can be version 0.12.0, but I am using 0.11.0 for compatibility with the I2C audio
# Edit to the above note: I removed the dependancy on the I2S package.
rp2040-hal = { version = "0.12.0", features = ["critical-section-impl"] }
embedded-hal = "1.0"
heapless = "^0.8"