[package]
name = "pwm-led-fader"
version = "0.2.0"
edition = "2024"
authors = ["ramenspazz <kirisame.ramen@protonmail.com>"]
description = "Simple, no_std PWM LED fader / smoother with fixed update intervals. Works with any embedded-hal 1.0>
repository = "https://github.com/ramenspazz/rp2040_pwm_controller"
license = "Apache-2.0"
keywords = ["embedded", "no_std", "pwm", "led", "fader"]
categories = ["embedded", "no-std"]
readme = "README.md"

[dependencies]
rp2040-hal = { version = "^0.12.0" }
embedded-hal = "1.0.0"
heapless = { version = "0.8", default-features = false }  # for the fixed-size Vec

[features]
default = []

